# flagcxx

./: CMakeLists.txt  README.md  flag.h  test.cpp
.github/workflows/: cmake.yml
